<resources>
    <string name="app_name">Notes</string>
    <string name="add_note">Add Note</string>
    <string name="delete_note">Delete Note</string>
    <string name="note_title">Note Title</string>
    <string name="note_content">Note Content</string>
    <string name="save_note">Add Note</string>
    <string name="delete">Delete</string>
    <string name="my_notes">My Notes</string>

</resources>