<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="ExtraText">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@color/purple"
        android:text="@string/my_notes"
        android:textColor="@color/white"
        android:paddingStart="160dp"
        android:textSize="24sp"
        android:textStyle="bold" />

    <ListView
        android:id="@+id/noteListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottomBar"
        android:layout_below="@id/textViewTitle"
        android:padding="16dp"
        android:divider="#EDEDED"
        android:dividerHeight="8dp" />

    <RelativeLayout
        android:id="@+id/bottomBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#EDEDED"
        android:padding="16dp">

        <Button
            android:id="@+id/btnAddNote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_note" />

        <Button
            android:id="@+id/btnDeleteNote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/btnAddNote"
            android:layout_marginStart="148dp"
            android:text="@string/delete_note" />
    </RelativeLayout>

</RelativeLayout>